# Niyama

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Functor.h  GradientDescent.h  LICENSE  Niyama.cpp  Niyama.h  README.md  UnconstrainedOptimizer.h
